# IOT-Manage-System

./: .dockerignore  .env  .gitignore  Dockerfile  Dockerfile-back  Dockerfile.alternative  README.md  docker-compose.yml  需求分析.md
api-gateway/: Dockerfile  go.mod  go.sum  main.go
backend/: Dockerfile  main.py  pyproject.toml  requirements.txt
backend/core/: config.py  security.py
backend/crud/: position.py  trajectory_point.py  user.py
backend/db/: database.db
backend/middlewares/: permissions.py
backend/models/: models.py  position_model.py  trajectory_point.py  user_model.py
backend/routers/: auth.py  monitor_position.py  monitor_server_status.py  position.py  server_monitor.py  trajectory.py  trajectory_point.py  user.py  user_search.py  utils.py
backend/schemas/: trajectory.py  trajectory_point.py  user.py
backend/tests/: test_api_user.py
backend/tests/utils/: utils.py
backend/utils/: color.py  distance.py  position_utils.py  positions.py  trajectory.py  velocity.py
config/: mosquitto.conf  mosquitto.passwd
doc/: ADMIN_MANUAL.md  PLATFORM_MANUAL.md  USER_MANUAL.md
forwarder/: .gitignore  Dockerfile  index.js  package-lock.json  package.json
frontend/: .dockerignore  .env  01.js  02.js  03.js  04.js  Dockerfile  README.md  components.d.ts  components.json  env.d.ts  eslint.config.ts  example.json  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  prettier.config.js  vite.config.ts  vite.config.ts.timestamp-1755883316754-3914382a9e59a8.mjs
map-service/: API_DOCUMENTATION.md  Dockerfile  POLYGON_FENCE_API.md  go.mod  (+2 more)
(+325 files in other folders)
